# GUSI68

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.mk  README.md  build.sh  fuck.txt  oops.py
GUSIConfig/: AppearanceHelpers.c  AppearanceHelpers.h  Assertions.c  Assertions.h  BaseDialog.cp  BaseDialog.h  BaseWindow.cp  BaseWindow.h  GCConfigPane.cp  GCConfigPane.h  GCConfigPane.r  GCData.cp  GCData.h  GCDevicesPane.cp  GCDevicesPane.h  GCDevicesPane.r  GCDialog.cp  GCDialog.h  GCMain.cp  GCPane.cp  GCPane.h  GCSocketsPane.cp  GCSocketsPane.h  GCSocketsPane.r  GUSIConfig.pch  GUSIConfig.r  GUSIConfig.rsrc  UDialogUtils.cp  UDialogUtils.h
include/: DCon.h  ast_common.h  dirent.h  errno.h  fcntl.h  netdb.h  sfhdr.h  sfio.h  sfio_s.h  sfio_t.h  signal.h  utime.h  vthread.h
include/arpa/: inet.h
include/machine/: endian.h
include/netinet/: tcp.h
include/sys/: errno.h  ppc.h  signal.h  socket.h  stat.h  time.h  uio.h
original_nw/include/: .cvsignore  errno.h  fcntl.h  inttypes.h
original_nw/include/sys/: cdefs.h  time.h  types.h
original_nw/src/: GUSI.tex  GUSIBasics.nw  GUSIBuffer.nw  GUSIConfig.nw  GUSIContext.nw  GUSIContextQueue.nw  GUSIDCon.nw  GUSIDescriptor.nw  GUSIDevice.nw  GUSIDiag.nw  GUSIFSWrappers.nw  GUSIFactory.nw  GUSIFileSpec.nw  GUSIForeignThreads.nw  GUSIInet.nw  GUSIMPW.nw  GUSIMPWGlue.68K.LIb  GUSIMPWGlue.SC.Lib  GUSIMPWStdio.nw  GUSIMSL.nw  GUSIMTInet.nw  GUSIMTNetDB.nw  GUSIMTTcp.nw  GUSIMTUdp.nw  GUSIMacFile.nw  GUSINetDB.nw  GUSINull.nw  GUSIOTInet.nw  GUSIOTNetDB.nw  GUSIOpenTransport.nw  GUSIPOSIX.nw  GUSIPPC.nw  GUSIPThread.nw  GUSIPipe.nw  GUSISIOUX.nw  GUSISIOW.nw  GUSISfio.nw  GUSISignal.nw  GUSISocket.nw  GUSISocketMixins.nw  (+4 more)
src/: (.*?)  AddressXlation.h  DCon.h  GUSIBasics.cpp  GUSIBasics.h  GUSIBuffer.cpp  GUSIBuffer.h  GUSIConfig.cpp  GUSIConfig.h  GUSIContext.cpp  GUSIContext.h  GUSIContextQueue.cpp  GUSIContextQueue.h  GUSIDCon.cpp  GUSIDCon.h  GUSIDescriptor.cpp  GUSIDescriptor.h  GUSIDevice.cpp  GUSIDevice.h  GUSIDiag.cpp  GUSIDiag.h  GUSIFSWrappers.cpp  GUSIFSWrappers.h  GUSIFactory.cpp  GUSIFactory.h  GUSIFileSpec.cpp  GUSIFileSpec.h  GUSIForeignThreads.cpp  GUSIForeignThreads.h  GUSIInet.cpp  GUSIInet.h  GUSIInternal.h  GUSIMPW.cpp  GUSIMPW.h  GUSIMPWStdio.cpp  GUSIMPWStdio.h  GUSIMSL.cpp  GUSIMSL.h  GUSIMTInet.cpp  GUSIMTInet.h  (+45 more)
src/sys/: ppc.h
trashed_include/: errno.h  inttypes.h  types.h
